--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import "../styles/global.css";
+import Navigation from "../components/Navigation.astro";
 
-const pageTitle = "Home Page"
+const pageTitle = "Home Page";
 ---
 
 <html lang="en">
@@ -13,8 +14,7 @@ const pageTitle = "Home Page"
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/blog">Blog</a>
-    <a href="/about/">About</a>
+    <Navigation />
     <h1>{pageTitle}</h1>
     <ul>
       <li><a href="/posts/post-1/">Post 1</a></li>
