--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 const { frontmatter } = Astro.props;
 ---
 
@@ -11,32 +12,34 @@ const { frontmatter } = Astro.props;
     <title>{frontmatter.title}</title>
     <style>
       .meta {
-        display: flex;
-        gap: 0.5em;
-        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
       }
-      img {
-        max-width: 100%;
+      .meta:has(p) {
+        text-align: center;
+      }
+
+      @media screen and (min-width: 768px) {
+        .meta {
+          grid-template-columns: repeat(3, 1fr);
+        }
       }
     </style>
   </head>
+  <body>
+    <h1>{frontmatter.title}</h1>
 
-  <h1>{frontmatter.title}</h1>
+    <p>{frontmatter.description}</p>
 
-  <p>{frontmatter.description}</p>
+    <div class="meta">
+      <p>Written by {frontmatter.author}</p>
+      <p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
+      <p>🏷️ Tags: {frontmatter.tags.join(", ")}</p>
+    </div>
 
-  <div class="meta">
-    <p>Written by {frontmatter.author}</p>
-    <span>|</span>
-    <p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
-    <span>|</span>
-    <p>🏷️ Tags: {frontmatter.tags.join(", ")}</p>
-  </div>
+    <img src={frontmatter.image.url} alt={frontmatter.image.alt} />
 
-  <img src={frontmatter.image.url} alt={frontmatter.image.alt} />
-
-  <!-- Markdown content goes here -->
-  <slot />
-
-
+    <!-- Markdown content goes here -->
+    <slot />
+  </body>
 </html>
