--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,11 @@ body {
     box-sizing: border-box;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
+
 h1 {
     margin: 1rem 0;
     font-size: 2.5rem;
