--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     background-color: #f1f5f9;
     font-family: sans-serif;
@@ -6,13 +10,9 @@ html {
 body {
     margin: 0 auto;
     width: 100%;
-    max-width: 80ch;
+    max-width: 1024px;
     padding: 1rem;
     line-height: 1.5;
-}
-
-* {
-    box-sizing: border-box;
 }
 
 img {
@@ -25,66 +25,6 @@ h1 {
     font-size: 2.5rem;
 }
 
-.nav-links {
-    width: 100%;
-    top: 5rem;
-    left: 48px;
-    background-color: #ff9776;
-    display: none;
-    margin: 0;
-}
-
-.nav-links a {
-    display: block;
-    text-align: center;
-    padding: 10px 0;
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-.nav-links a:hover,
-.nav-links a:focus {
-    background-color: #ff9776;
-}
-
 .expanded {
     display: unset;
-}
-
-/** Large screen **/
-@media screen and (min-width: 636px) {
-    .nav-links {
-        margin-left: 5em;
-        position: static;
-        display: block;
-        width: auto;
-        background: none;
-    }
-
-    .nav-links a {
-        display: inline-block;
-        padding: 15px 20px;
-    }
-
-    .hamburger {
-        display: none;
-    }
-
-}
-
-/** Hamburguer menu **/
-.hamburger {
-    padding: .5em;
-    cursor: pointer;
-    border: none;
-}
-
-.hamburger .line {
-    display: block;
-    width: 40px;
-    height: 5px;
-    margin-bottom: 10px;
-    background-color: #ff9776;
 }
