--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,45 +1,36 @@
 ---
-import "../styles/global.css";
+import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{frontmatter.title}</title>
-    <style>
+<BaseLayout title={frontmatter.title}>
+  <style>
+    .meta {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .description,
+    .meta:has(p) {
+      text-align: center;
+    }
+
+    @media screen and (min-width: 768px) {
       .meta {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(3, 1fr);
       }
-      .meta:has(p) {
-        text-align: center;
-      }
+    }
+  </style>
 
-      @media screen and (min-width: 768px) {
-        .meta {
-          grid-template-columns: repeat(3, 1fr);
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <h1>{frontmatter.title}</h1>
+  <p class="description">{frontmatter.description}</p>
 
-    <p>{frontmatter.description}</p>
+  <div class="meta">
+    <p>Written by {frontmatter.author}</p>
+    <p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
+    <p>🏷️ Tags: {frontmatter.tags.join(", ")}</p>
+  </div>
 
-    <div class="meta">
-      <p>Written by {frontmatter.author}</p>
-      <p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
-      <p>🏷️ Tags: {frontmatter.tags.join(", ")}</p>
-    </div>
+  <img src={frontmatter.image.url} alt={frontmatter.image.alt} />
 
-    <img src={frontmatter.image.url} alt={frontmatter.image.alt} />
-
-    <!-- Markdown content goes here -->
-    <slot />
-  </body>
-</html>
+  <!-- Markdown content goes here -->
+  <slot />
+</BaseLayout>
