--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -14,6 +14,10 @@ const { frontmatter } = Astro.props;
       text-align: center;
     }
 
+    img {
+      margin: 0 auto;
+    }
+
     @media screen and (min-width: 768px) {
       .meta {
         grid-template-columns: repeat(3, 1fr);
