--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,10 +3,9 @@ import BlogPost from "../components/BlogPost.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
 const allPosts = await Astro.glob("../pages/posts/*.md");
-const pageTitle = "My Astro Learning Blog";
 ---
 
-<BaseLayout title={pageTitle}>
+<BaseLayout title="My Astro Learning Blog">
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
     {
