--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -32,7 +32,7 @@ const links = [
 
   .nav-links a:hover,
   .nav-links a:focus {
-    background-color: #ff9776;
+    text-decoration: underline;
   }
 
   /** Large screen **/
@@ -42,7 +42,6 @@ const links = [
       position: static;
       display: block;
       width: auto;
-      background: none;
     }
 
     .nav-links a {
