--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,17 +12,15 @@ const identity = {
 
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
-const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase";
 ---
 
 <BaseLayout title={pageTitle}>
-  <style define:vars={{ skillColor, fontWeight, textCase }}>
+  <style define:vars={{ fontWeight, textCase }}>
     .skill {
-      color: var(--skillColor);
       font-weight: var(--fontWeight);
       text-transform: var(--textCase);
     }
