--- a/src/components/Hamburguer.astro
+++ b/src/components/Hamburguer.astro
@@ -20,8 +20,8 @@
   }
 </style>
 
-<button class="hamburger">
-  <span class="line"></span>
-  <span class="line"></span>
-  <span class="line"></span>
+<button class="hamburger" aria-label="click to expand navigation menu">
+  <span aria-hidden="true" class="line"></span>
+  <span aria-hidden="true" class="line"></span>
+  <span aria-hidden="true" class="line"></span>
 </button>
